MULE-3882. Removal of remoteSync.  note that the remoteSyncTimeout property was renamed to responseTimeout.  The global configuration properties on Muleconfiguration were also changed. Mule-3499 is also fixed by this changeset
git-svn-id: https://svn.codehaus.org/mule/branches/mule-2.x@13138 bf997673-6b11-0410-b953-e057580c5b09